# PMAShield

./: README.md  pyproject.toml
pma_shield/: __init__.py  logger.py  model_registry.py
pma_shield/core/: base.py
pma_shield/detector/: __init__.py  capture.py  config.py  data_mcptox.py  data_mpma.py  detection.py  disagreement.py  features.py  mpma_config.py  selection.py  spans.py  voting.py
pma_shield/detector/scripts/: run_capture.py  run_data.py  run_detection.py  run_disagreement.py  run_selection.py  run_transfer.py
pma_shield/interp/: README.md  __init__.py  config.py  head_roles.py  patching.py  probe_data.py  prompting.py
pma_shield/interp/figures/: __init__.py  fig_all_head_patterns.py  fig_attn_vs_mlp.py  fig_circuit_matrix.py  fig_disagreement.py  fig_head_heatmap.py  fig_head_patterns.py  style.py  table_head_roles.py
pma_shield/interp/scripts/: disagreement_from_csv.py  make_figures.py  make_mock_figures.py  run_circuit_matrix.py  run_head_roles.py  run_patching.py
pma_shield/prompt/: prompt_generator.py
pma_shield/providers/: llm.py
pma_shield/transferability/: matrix.py
scripts/: common.sh  phase_detection.sh  phase_interp.sh  run_all_models.sh
